{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 607,
  "lineage": "05262293-6872-1c76-4d71-0285f03c3294",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sudos-duihua-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:365599589601:instance/i-0258a0fa3dc21ca97",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0258a0fa3dc21ca97",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "sudos-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a1720c289b4780fd",
            "private_dns": "ip-192-168-1-253.ec2.internal",
            "private_ip": "192.168.1.253",
            "public_ip": "18.232.64.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09b40ed72d2cc229f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe2899882a640ceb",
            "tags": {
              "Name": "sudos-duihua-ec2"
            },
            "tags_all": {
              "Name": "sudos-duihua-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f4a31600d4692c6"
            ]
          },
          "dependencies": [
            "module.key.aws_key_pair.sudos-key",
            "module.vpc.aws_internet_gateway.sudos-duihua-gateway",
            "module.vpc.aws_route.sudos-duihua-public-route",
            "module.vpc.aws_route_table.sudos-duihua-public-rt",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.sudos-duihua-sg",
            "module.vpc.aws_subnet.sudos-duihua-public_subnet",
            "module.vpc.aws_subnet.sudos-duihua-public_subnet2",
            "module.vpc.aws_vpc.sudos-duihua-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sudos-duihua-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365599589601:internet-gateway/igw-0a7f26b5c362269be",
            "id": "igw-0a7f26b5c362269be",
            "owner_id": "365599589601",
            "tags": {
              "Name": "sudos-duihua-gateway"
            },
            "tags_all": {
              "Name": "sudos-duihua-gateway"
            },
            "vpc_id": "vpc-08f8799e2992dd773"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sudos-duihua-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "sudos-duihua-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a7f26b5c362269be",
            "id": "r-rtb-09783a87c588d73ab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09783a87c588d73ab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.sudos-duihua-gateway",
            "module.vpc.aws_route_table.sudos-duihua-public-rt",
            "module.vpc.aws_vpc.sudos-duihua-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sudos-duihua-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365599589601:route-table/rtb-09783a87c588d73ab",
            "id": "rtb-09783a87c588d73ab",
            "owner_id": "365599589601",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7f26b5c362269be",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sudos-duihua-public-rt"
            },
            "tags_all": {
              "Name": "sudos-duihua-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f8799e2992dd773"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.sudos-duihua-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce02a4540a65e865",
            "route_table_id": "rtb-09783a87c588d73ab",
            "subnet_id": "subnet-0fe2899882a640ceb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.sudos-duihua-public-rt",
            "module.vpc.aws_subnet.sudos-duihua-public_subnet",
            "module.vpc.aws_vpc.sudos-duihua-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sudos-duihua-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365599589601:security-group/sg-03f4a31600d4692c6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f4a31600d4692c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Security Group to Allow SSH and Jenkins Traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 9000",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "terraform-20220916142602024900000001",
            "name_prefix": "terraform-",
            "owner_id": "365599589601",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sudos-duihua-sg"
            },
            "tags_all": {
              "Name": "sudos-duihua-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f8799e2992dd773"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.sudos-duihua-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sudos-duihua-public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365599589601:subnet/subnet-0fe2899882a640ceb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe2899882a640ceb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "365599589601",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sudos-duihua-public_subnet"
            },
            "tags_all": {
              "Name": "sudos-duihua-public_subnet"
            },
            "vpc_id": "vpc-08f8799e2992dd773"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sudos-duihua-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sudos-duihua-public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365599589601:subnet/subnet-0b38201bc06a9f016",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b38201bc06a9f016",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "365599589601",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sudos-duihua-public_subnet2"
            },
            "tags_all": {
              "Name": "sudos-duihua-public_subnet2"
            },
            "vpc_id": "vpc-08f8799e2992dd773"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sudos-duihua-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sudos-duihua-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365599589601:vpc/vpc-08f8799e2992dd773",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-023750058c172975e",
            "default_route_table_id": "rtb-0f7210a57b9a2603c",
            "default_security_group_id": "sg-0fd346eb1f146b45e",
            "dhcp_options_id": "dopt-01bdf8ee2a404dc09",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08f8799e2992dd773",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f7210a57b9a2603c",
            "owner_id": "365599589601",
            "tags": {
              "Name": "sudos-duihua-vpc"
            },
            "tags_all": {
              "Name": "sudos-duihua-vpc"
            }
          }
        }
      ]
    }
  ]
}